# study

./: .gitignore  CLAUDE.md  README.md
rust/: CLAUDE.md  CURRICULUM.md  Cargo.toml  NETWORK_CURRICULUM.md
rust/.devcontainer/: Dockerfile  devcontainer.json
rust/01-hello-cargo/: Cargo.toml  QA.md  README.md
rust/01-hello-cargo/src/: main.rs
rust/02-variables-and-types/: Cargo.toml  QA.md  README.md
rust/02-variables-and-types/src/: main.rs
rust/03-functions-and-control-flow/: Cargo.toml  QA.md  README.md
rust/03-functions-and-control-flow/src/: main.rs
rust/04-ownership/: QA.md  README.md
rust/04-ownership/src/: main.rs
rust/05-borrowing/: Cargo.toml  QA.md  README.md
rust/05-borrowing/src/: main.rs
rust/06-structs-and-methods/: Cargo.toml  QA.md  README.md
rust/06-structs-and-methods/src/: main.rs
rust/07-enums-and-matching/: Cargo.toml  QA.md  README.md
rust/07-enums-and-matching/src/: main.rs
rust/08-traits-and-generics/: Cargo.toml  QA.md  README.md
rust/08-traits-and-generics/src/: main.rs
rust/09-error-handling/: Cargo.toml  QA.md  README.md
rust/09-error-handling/src/: main.rs
rust/10-collections-and-iterators/: QA.md  README.md
rust/11-lifetimes/: QA.md  README.md
rust/net-01-tcp-echo/: Cargo.toml  QA.md  QA_HTTPS.md  README.md
rust/net-02-http-server/: Cargo.toml  QA.md  README.md
rust/net-03-dns/: Cargo.toml  QA.md  README.md
rust/net-04-tls/: Cargo.toml  QA.md  README.md  tls-handshake-viz.html
rust/net-05-ca/: Cargo.toml  QA.md  README.md
rust/net-extra-http2-hpack/: Cargo.toml  QA.md  README.md
(+47 files in other folders)
